# bakup

./: .envrc  Cargo.toml  flake.nix
.cargo/: config.toml
crates/bakpak/: Cargo.toml
crates/bakpak/src/: chacha20_blake3.rs  common.rs  encryptor.rs  error.rs  lib.rs  stream_writer.rs
crates/bakup/: Cargo.toml
crates/bakup/src/: cli.rs  lib.rs
crates/bakup/src/cas/: content_addressable_store.rs  directory.rs  mod.rs
crates/bakup/src/chunking/: aes_gear_table.rs
crates/bakup/src/index/: index_writer.rs  mod.rs
crates/bakup/src/pack/: mod.rs  pack_writer.rs
src/: lib.rs  main.rs
src/cas/: directory.rs
src/chunking/: aes_gear.rs  chunker_state.rs  mod.rs  stream_chunker.rs
src/pack/: mod.rs  pack_writer.rs
