[package]
name = "bakup"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
blake3 = { version = "1.8.2", features = ["serde"] }
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.48", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.15.0"

[dev-dependencies]
proptest = "1.8.0"
