[package]
name = "bakpak"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, features = ["zeroize"] }
blake3 = { version = "1.8.2", default-features = false, features = ["std"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "std"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["alloc", "zeroize"] }
generic-array = { version = "0.14.7", default-features = false, features = ["zeroize"] }
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
thiserror = { version = "2.0.17", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["alloc", "precomputed-tables", "zeroize", "reusable_secrets"] }
zeroize = { version = "1.8.2", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["rand_core"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
